app/styles/app.css
/* ... */
.home-image-gallery-bottom > img {
  width: calc(33.3333% - 0.5rem);
  object-fit: cover;
  border-radius: 0;
}

.home-gallery-upload-button {
  width: 35vw;
  height: 4rem;
  margin-left: calc(32.5vw - 2rem);
  margin-top: 4rem;
  margin-bottom: 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.35rem;
  text-align: center;
  border: none;
  outline: none;
  border-radius: 137px;
  background-color: transparent;
  cursor: pointer;
}

.home-gallery-upload-button > p {
  width: 35vw;
  height: 4rem;
  border-radius: 137px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  color: black;
  white-space: nowrap;
  transition:
    width 0.3s,
    background-color 0.3s;
  transition-timing-function: cubic-bezier(0.88, 0, 0.12, 1);
}

.home-gallery-upload-button > p > span {
  transform: translateX(0);
  transition: transform 0.3s;
  transition-timing-function: cubic-bezier(0.88, 0, 0.12, 1);
}

.home-gallery-upload-button > p > svg {
  position: absolute;
  transform: translateX(4rem) rotate(90deg);
  transition: transform 0.3s;
  transition-timing-function: cubic-bezier(0.88, 0, 0.12, 1);
}

.home-gallery-upload-button > p > svg > path {
  fill: white;
  transition: fill 0.3s;
  transition-timing-function: cubic-bezier(0.88, 0, 0.12, 1);
}

.home-gallery-upload-button:hover > p {
  width: 4rem;
}

.home-gallery-upload-button:hover > p > span {
  transform: translateX(8rem);
}

.home-gallery-upload-button:hover > p > svg {
  position: absolute;
  transform: translateX(0) rotate(0deg);
}

.home-gallery-upload-button:hover > p > svg > path {
  fill: black;
}

.home-gallery-upload-button:active > p {
  background-color: #b3b3b3;
}

.home-gallery-upload-button:active > p > svg > path {
  fill: white;
}

.mobile-gallery-link {
  display: none;
}

@media only screen and (max-width: 430px) {
  .home-gallery {
    width: calc(100vw - 32px);
    padding: 32px 16px 32px 16px;
    overflow: hidden;
  }

  .home-gallery-top {
    display: flex;
    justify-content: space-between;
    font-size: 18px;
    font-weight: 400;
    line-height: 21.6px;
  }

  .home-gallery-top > a {
    display: none;
  }

  .home-gallery-hashtag {
    height: 51.15px;
    font-size: 41.89px;
    line-height: 51.15px;
    display: flex;
    align-items: center;
  }

  .home-gallery-upload-button {
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .home-gallery-upload-button > p,
  .home-gallery-upload-button:hover > p,
  .home-gallery-upload-button:active > p {
    width: 100%;
    font-weight: 500;
    font-size: 18px;
    line-height: 21.6px;
  }

  .home-gallery-upload-button > p > span,
  .home-gallery-upload-button:hover > p > span,
  .home-gallery-upload-button:active > p > span {
    transform: none;
  }

  .home-gallery-upload-button > p > svg,
  .home-gallery-upload-button:hover > p > svg,
  .home-gallery-upload-button:active > p > svg {
    display: none;
  }

  .home-image-gallery-top {
    height: 400px;
    margin-bottom: 8px;
  }

  .home-image-gallery-top > img {
    width: calc(100%);
    object-fit: cover;
    border-radius: 0;
  }

  .home-image-gallery-middle {
    display: flex;
    justify-content: space-between;
    height: 195px;
  }

  .home-image-gallery-middle > img {
    width: calc(50% - 4px);
    object-fit: cover;
    border-radius: 0;
  }

  .home-image-gallery-bottom {
    height: 263px;
    margin-top: 8px;
  }

  .home-image-gallery-bottom > img {
    width: 100%;
    object-fit: cover;
  }

  .mobile-gallery-link {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-top: 24px;
    margin-bottom: 24px;
    gap: 10px;
    font-size: 18px;
    line-height: 21.6px;
  }

  .mobile-gallery-link > img {
    height: 14px;
    margin: 0;
  }
}

/*
* --------------------------------------------------
* components/Home/CustomerTestimonials
* --------------------------------------------------
*/
.home-customer-testimonials {
  width: calc(100vw - 11.5rem);
  height: 240px;
  padding: 0 0 0 11.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 181px;
}

.customer-testimonial-stars {
  width: 362px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.35rem;
  gap: 6px;
}

.customer-testimonial-stars > img {
  height: 18px;
}

.customer-testimonial-carousel {
  width: 70%;
  height: 240px;
  margin: 0 !important;
}

.customer-testimonial-carousel > .swiper-wrapper {
  transition-timing-function: ease-out;
}

.customer-testimonial {
  height: 240px !important;
  display: flex !important;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
}

.customer-testimonial > p {
  width: 75%;
  height: fit-content;
  font-size: 1.618125rem;
  font-weight: 400;
  line-height: 30.8.5rem;
}

.customer-testimonial > span {
  font-size: 1rem;
  height: fit-content;
  font-weight: 400;
  line-height: 1.2rem;
  color: #b9b9b9;
}
/* ... */

